--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "repository": "https://github.com/AndersonAndrad/study-nodejs.git",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^4.1.1"
+    "@types/node": "^17.0.23",
+    "git-commit-msg-linter": "^4.1.1",
+    "typescript": "^4.6.3"
   }
 }
