--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/AndersonAndrad/study-nodejs.git",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "eslint": "7.12.1",
@@ -14,7 +15,13 @@
     "eslint-plugin-promise": "5.0.0",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
