--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,11 @@
     "space-in-parens": ["error", "always"],
     "semi-spacing": ["error", {"before": true, "after": true}],
     "space-before-blocks": ["error", "always"],
-    "space-before-function-paren": ["error", "always"],
+    "space-before-function-paren": ["error", {
+      "anonymous": "always",
+      "named": "always",
+      "asyncArrow": "always"
+  }],
     "sort-imports": ["error", {
         "ignoreDeclarationSort": false,
         "ignoreMemberSort": false,
