--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "test": "jest",
-    "test:staged": "jest"
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests --runInBand",
+    "test:unit": "npm test --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "jest test -- --findRelatedTests",
+    "test:coverage": "npm test -- --coverage"
   }
 }
